- correction of ListMenu collapse - adding image for close
git-svn-id: https://efaps.googlecode.com/svn/trunk@1323 fee104cc-1dfa-8c0f-632d-d3b7e6b59fb0

--- a/webapp/src/main/java/org/efaps/webapp/components/listmenu/ListMenuPanel.css
+++ b/webapp/src/main/java/org/efaps/webapp/components/listmenu/ListMenuPanel.css
@@ -57,7 +57,7 @@
   color: #FFF;
 }
 
-.eFapsListMenuClose:hover  , .eFapsListCollapse:hover {
+.eFapsListMenuClose:hover,.eFapsListCollapse:hover,.eFapsListMenuGoInto:hover {
   background-color: #96d265;
   color: red;
 }
@@ -67,11 +67,6 @@
   text-align: center;
   width: 1%;
   color: #FFF;
-}
-
-.eFapsListMenuGoInto:hover {
-  background-color: #96d265;
-  color: red;
 }
 
 img.eFapsListMenuIcon {
